--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,11 @@ img {
 /* header nav section */
 nav {
     background-color: var(--white);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
 }
 
 nav a {
@@ -119,8 +124,11 @@ header nav ul li:not(.no-underline):hover{
 
 /* header main section */
 
+
+
 .header-bg {
     background-color: var(--header-bg);
+    margin-top: 5rem;
     margin-bottom: 7rem;
 }
 
