--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,13 @@ img {
     width: 100%;
 }
 
-.container-80 {
-    width: 80%;
+.container-big {
+    max-width: 1200px;
     margin: 0 auto;
 }
 
-.container-70 {
-    width: 70%;
+.container-small {
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -49,6 +49,10 @@ img {
 
 .column {
     flex-direction: column;
+}
+
+.jc-center {
+    justify-content: center;
 }
 
 .jc-between {
@@ -96,6 +100,7 @@ nav {
     left: 0;
     right: 0;
     z-index: 2;
+    padding: 0 1rem;
 }
 
 nav a {
@@ -122,14 +127,19 @@ header nav ul li:not(.no-underline):hover{
     border-bottom: 1px solid var(--footer-bg);
 }
 
+.logo {
+    width: 7.5rem;
+    margin-right: 1.5rem;
+}
+
 /* header main section */
-
-
 
 .header-bg {
     background-color: var(--header-bg);
     margin-top: 5rem;
     margin-bottom: 7rem;
+    position: relative;
+    bottom: -5rem;
 }
 
 h1{
@@ -271,7 +281,7 @@ header > .header-bg > .container-80 {
 
     /* call to action */
 
-    .cta {
+    #cta {
         padding: 6rem 0;
     }
 
