--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,6 @@ header nav ul li:not(.no-underline):hover{
     background-color: var(--header-bg);
     margin-top: 5rem;
     margin-bottom: 7rem;
-    position: relative;
-    bottom: -5rem;
 }
 
 h1{
@@ -147,7 +145,7 @@ h1{
     font-weight: 800;
 }
 
-header > .header-bg > .container-80 {
+header > .header-bg > .container-big {
     position: relative;
     bottom: -3.5rem;
 }
