add margin-top to #enterprise

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ header > .header-bg > .container-big {
     }
 
     #enterprise {
-        margin-top: 3re,;
+        margin-top: 3rem;
     }
 
     /* .ßm-left {
