--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,9 @@ img {
 
 /* change color to gray btn elements on :hover */
 .btn-light:hover {
-    background-color: var(--light-gray);
-    color: var(--white);
+    color: lightgray;
 }
+
 
 /* HEADER */
 
