--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ img {
 .btn:hover {
     background-color: var(--baby-blue);
     color: var(--button-bg);
-    border: 1px solid var(--button-bg);
+    /* border: 1px solid var(--button-bg); */
 }
 
 /* gray btn elements */
