--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ img {
 .btn {
     background-color: var(--button-bg);
     color: var(--white);
+    font-size: 1rem;
     padding: 0.5rem 0.7rem;
     text-decoration: none;
 }
@@ -99,19 +100,17 @@ img {
     text-align: center;
 }
 
-
-
 /* change colors to .btn elements on :hover */
 .btn:hover {
     background-color: var(--baby-blue);
     color: var(--button-bg);
-    border: 1px solid var(--button-bg);
 }
 
 /* gray btn elements */
 .btn-light {
     background-color: var(--white);
     color: var(--light-gray);
+    font-size: 1rem;
     padding: 0.5rem 0.7rem;
     text-decoration: none;
 }
@@ -137,6 +136,7 @@ nav {
 nav a {
     text-decoration: none;
     color: var(--footer-bg);
+    font-size: 1rem;
 }
 
 nav ul li {
@@ -172,7 +172,7 @@ header nav ul li:not(.no-underline):hover{
 }
 
 h1{
-    font-size: 56px;
+    font-size: 4.5rem;
     font-weight: 800;
 }
 
@@ -199,7 +199,7 @@ header > .header-bg > .container-big {
 
 .hero > .col-smaller > a > i {
     color: var(--footer-bg);
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: bold;
     padding-top: 6rem;
 }
@@ -208,6 +208,14 @@ header > .header-bg > .container-big {
 
     main {
         background-color: var(--white);
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
     }
 
     /* find your plan section */
